--- a/kontakt-abednarz.html
+++ b/kontakt-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section contacts2 cid-s5eiXVZGf1" id="contacts2-j">
     <!---->
     
     <!---->
@@ -112,7 +112,7 @@
                                 Zadzwoń do mnie:
                             </h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                +48 576-996-046</p>
+                                <a href="https://wa.me/48576996046">+48 576-996-046</a></p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
@@ -121,7 +121,7 @@
                                 Napisz do mnie:
                             </h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                abednarz@live.com</p>
+                                <a href="mailto:abednarz@live.com">abednarz@live.com</a></p>
                         </div>
                     </div>
                 </div>
