--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="row mt-4">
             
-            <div class="item features-image сol-12 col-md-6 col-lg-4 active">
+            <div class="item features-image сol-12 col-md-6 col-lg-6 active">
                 <div class="item-wrapper">
                     <div class="item-img">
                         <a href="bierzmowanie-fotograf.html"><img src="assets/images/dsc-197-436x291.jpg" alt="" title="" data-slide-to="0" data-bs-slide-to="0"></a>
@@ -130,14 +130,14 @@
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="bierzmowanie-fotograf.html" class="btn item-btn btn-primary display-7">Więcej&nbsp; &gt;</a></div>
                 </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+            </div><div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
                         <a href="dron-pilot-start.html"><img src="assets/images/dji1613839045339-1-1046x785.jpeg" alt="" title="" data-slide-to="1" data-bs-slide-to="1"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">DronPilot wystartował</h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>AB</strong><em>&nbsp;09-09-2025</em></h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>AB</strong><em>&nbsp;07-03-2021</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Początek roku 2021 rozpoczął się od poszerzenia moich kwalifikacji. Zdobycie uprawnień na drona oraz zakup drona z kamerą 4K otwiera mnie na nowe możliwości w fotografii oraz filmowaniu.<br>
                         </p>
                     </div>
@@ -284,7 +284,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">mobirise.com</a> simple website maker</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This site</a> was designed with Mobirise templates</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Akceptuję' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="W celu poprawy jakości naszych usług, stosujemy na tej stronie pliki cookies..">
