--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="dron-pilot-start.html"><img src="assets/images/dji1613839045339-1-1046x785.jpeg" alt="Dron Pilot Zdjęcia z drona" title="" data-slide-to="1" data-bs-slide-to="1"></a>
+                        <a href="dron-pilot-start.html"><img src="assets/images/dji1613839045339-1-1046x785.jpg" alt="Dron Pilot Zdjęcia z drona" title="" data-slide-to="1" data-bs-slide-to="1"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">DronPilot wystartował</h5>
